added more to Makefile

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,5 +1,8 @@
+tests: test
+	./test
+
 test: tests.o binaryTree.o
-	g++ -Wall -g -o tests tests.o binaryTree.o
+	g++ -Wall -g -o test tests.o binaryTree.o
 
 %.o : %.c binaryTree.h
 	g++ -Wall -g -c $<
