--- a/src/Makefile
+++ b/src/Makefile
@@ -4,5 +4,8 @@ tests: test
 test: tests.o binaryTree.o
 	g++ -Wall -g -o test tests.o binaryTree.o
 
-%.o : %.c binaryTree.h
+%.o: %.c binaryTree.h
 	g++ -Wall -g -c $<
+
+clean:
+	rm test
